--- a/alura-studies/package.json
+++ b/alura-studies/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
     "typescript-plugin-css-modules": "^3.4.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.4",
     "sass": "^1.54.5"
   }
 }
